--- a/.eslintrc
+++ b/.eslintrc
@@ -13,7 +13,7 @@
     "es6": true
   },
   "extends": [
-    "react-app"
+    "react-app","next", "next/core-web-vitals"
   ],
   "plugins": [
     "import",
