--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.3.0",
+    "react-icons": "^4.4.0",
     "react-meta-tags": "^1.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
-    "react-slider": "^2.0.1",
     "styled-components": "^5.3.3",
     "swiper": "^8.2.5",
     "web-vitals": "^2.1.4"
@@ -34,6 +34,7 @@
     "eslint-plugin-react": "^7.29.3",
     "eslint-plugin-react-hooks": "^4.3.0",
     "gh-pages": "^4.0.0",
+    "slick-carousel": "^1.8.1",
     "webpack-cli": "^4.9.2"
   },
   "scripts": {
